// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardHeaderIcon/> render() should render icon 1`] = `
<img
  alt="Foo"
  className="container"
  src="foo.png"
  style={
    {
      "backgroundColor": "rgba(0, 0, 0, 0)",
    }
  }
/>
`;

exports[`<CardHeaderIcon/> render() should render icon with color as background-image 1`] = `
<img
  alt="Foo"
  className="container"
  src="foo.png"
  style={
    {
      "backgroundColor": "#123",
    }
  }
/>
`;
